--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "edemnew",
   "version": "0.0.1",
   "scripts": {
-    "dev": "vite",
+    "serve": "vite",
     "build": "vite build",
     "preview": "vite preview --port 5050",
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs --fix --ignore-path .gitignore"
