--- a/package.json
+++ b/package.json
@@ -4,14 +4,17 @@
   "scripts": {
     "serve": "vite",
     "build": "vite build",
-    "preview": "vite preview --port 5050",
-    "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs --fix --ignore-path .gitignore"
+    "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs --fix --ignore-path .gitignore",
+    "preview": "vite preview --port 5050"
   },
   "dependencies": {
     "firebase": "^9.6.10",
+    "path": "^0.12.7",
     "pinia": "^2.0.12",
+    "url": "^0.11.0",
     "vue": "^3.2.31",
     "vue-router": "^4.0.13",
+    "vuestic-ui": "^1.3.1",
     "vuex": "^4.0.2"
   },
   "devDependencies": {
@@ -24,7 +27,10 @@
     "eslint-plugin-vue": "^8.2.0",
     "postcss": "^8.4.12",
     "prettier": "^2.5.1",
+    "sass": "^1.49.10",
+    "sass-loader": "^12.6.0",
     "tailwindcss": "^3.0.23",
-    "vite": "^2.8.4"
+    "vite": "^2.8.4",
+    "vue-cli-plugin-vuestic-ui": "~1.0.5"
   }
 }
