--- a/package.json
+++ b/package.json
@@ -8,13 +8,13 @@
     "preview": "vite preview --port 5050"
   },
   "dependencies": {
+    "element-plus": "^2.1.8",
     "firebase": "^9.6.10",
     "path": "^0.12.7",
     "pinia": "^2.0.12",
     "url": "^0.11.0",
     "vue": "^3.2.31",
     "vue-router": "^4.0.13",
-    "vuestic-ui": "^1.3.1",
     "vuex": "^4.0.2"
   },
   "devDependencies": {
@@ -30,7 +30,8 @@
     "sass": "^1.49.10",
     "sass-loader": "^12.6.0",
     "tailwindcss": "^3.0.23",
-    "vite": "^2.8.4",
-    "vue-cli-plugin-vuestic-ui": "~1.0.5"
+    "unplugin-auto-import": "^0.6.9",
+    "unplugin-vue-components": "^0.18.5",
+    "vite": "^2.8.4"
   }
 }
