--- a/package.json
+++ b/package.json
@@ -13,9 +13,9 @@
     "path": "^0.12.7",
     "pinia": "^2.0.12",
     "url": "^0.11.0",
+    "uuid": "^8.3.2",
     "vue": "^3.2.31",
-    "vue-router": "^4.0.13",
-    "vuex": "^4.0.2"
+    "vue-router": "^4.0.13"
   },
   "devDependencies": {
     "@rushstack/eslint-patch": "^1.1.0",
