--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "dependencies": {
     "@supabase/supabase-js": "^1.33.3",
     "element-plus": "^2.1.8",
-    "firebase": "^9.6.10",
+    "lodash.debounce": "^4.0.8",
     "path": "^0.12.7",
     "pinia": "^2.0.12",
     "url": "^0.11.0",
@@ -19,13 +19,9 @@
     "vue-router": "^4.0.13"
   },
   "devDependencies": {
-    "@rushstack/eslint-patch": "^1.1.0",
     "@vitejs/plugin-vue": "^2.2.2",
     "@vitejs/plugin-vue-jsx": "^1.3.7",
-    "@vue/eslint-config-prettier": "^7.0.0",
     "autoprefixer": "^10.4.4",
-    "eslint": "^8.5.0",
-    "eslint-plugin-vue": "^8.2.0",
     "postcss": "^8.4.12",
     "prettier": "^2.5.1",
     "sass": "^1.49.10",
@@ -33,6 +29,7 @@
     "tailwindcss": "^3.0.24",
     "unplugin-auto-import": "^0.6.9",
     "unplugin-vue-components": "^0.18.5",
-    "vite": "^2.8.4"
+    "vite": "^2.8.4",
+    "eslint": "^8.2.0"
   }
 }
