--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
   },
   "dependencies": {
     "@supabase/supabase-js": "^1.33.3",
+    "date-fns": "^2.29.1",
     "element-plus": "^2.1.8",
+    "eslint-plugin-vue": "^9.3.0",
     "lodash.debounce": "^4.0.8",
     "path": "^0.12.7",
     "pinia": "^2.0.12",
@@ -21,7 +23,9 @@
   "devDependencies": {
     "@vitejs/plugin-vue": "^2.2.2",
     "@vitejs/plugin-vue-jsx": "^1.3.7",
+    "@vue/babel-plugin-jsx": "^1.1.1",
     "autoprefixer": "^10.4.4",
+    "eslint": "^8.2.0",
     "postcss": "^8.4.12",
     "prettier": "^2.5.1",
     "sass": "^1.49.10",
@@ -29,7 +33,6 @@
     "tailwindcss": "^3.0.24",
     "unplugin-auto-import": "^0.6.9",
     "unplugin-vue-components": "^0.18.5",
-    "vite": "^2.8.4",
-    "eslint": "^8.2.0"
+    "vite": "^2.8.4"
   }
 }
