--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "element-plus": "^2.1.8",
     "eslint-plugin-vue": "^9.3.0",
     "lodash.debounce": "^4.0.8",
+    "maska": "^1.5.0",
     "path": "^0.12.7",
     "pinia": "^2.0.12",
     "url": "^0.11.0",
